Some other things

--- a/src/app/guess-who/guess-who.component.html
+++ b/src/app/guess-who/guess-who.component.html
@@ -1,10 +1,11 @@
 <div class="container-fluid all-page" *ngIf="randomPunchline">
   <button routerLink='/' type="button" class="btn col-sm-8 col-md-5 col-lg-2 col-xl-2">Back</button>
-  <div class="citation col-4 offset-4 {{colorClass}}">
+  <div id="citation" class="citation col-4 offset-4">
     <div class="col-12">
       {{randomPunchline.content}}
     </div>
-    <input type="text" class="form-control" #authorAnswer placeholder="Who said this ?"/>
+    <input type="text" class="form-control" id="authorAnswer" #authorAnswer placeholder="Who said this ?"
+      (keydown.enter)="answer(authorAnswer.value)" />
     <button type="button" (click)="answer(authorAnswer.value)">Answer</button>
   </div>
 </div>
